Add the before script required for postgres on travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: ruby
 rvm:
   - 1.9.2
+
 bundler_args: --without development production
+
+before_script:
+  - psql -c 'create database saimoe2_test;' -U postgres
