Migrate database in CI environment.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,4 @@ bundler_args: --without development production
 
 before_script:
   - psql -c 'create database saimoe2_test;' -U postgres
+  - bundle exec rake db:migrate
