Separated dev/test confs for redis, made loader/matcher be class level instance vars.

--- a/config/redis/test.conf
+++ b/config/redis/test.conf
@@ -1,6 +1,7 @@
-dir ./spec/redis/db
-pidfile ./redis.pid
-port 6379
+dir ./db/redis
+pidfile ./test.pid
+dbfilename test.rdb
+port 6380
 timeout 300
 loglevel debug
 logfile stdout
